# infiniloom

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  codecov.yml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
bindings/node/: .gitignore  .npmignore  Cargo.toml  README.md  example.js  index.d.ts  index.js  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  Makefile  README.md  pyproject.toml
bindings/python/examples/: basic_usage.py  llm_integration.py
bindings/python/python/codeloom/: __init__.py
bindings/python/python/infiniloom/: __init__.py
bindings/python/src/: lib.rs  scanner.rs
bindings/python/tests/: test_basic.py
bindings/wasm/: .github-workflows-example.yml  .gitignore  Cargo.toml  Makefile  README.md  build.sh  package.json
bindings/wasm/demo/: README.md  index.html  node-example.js  test-simple.html
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: integration.rs
cli/: Cargo.toml
cli/src/: main.rs  scanner.rs
cli/tests/: integration_tests.rs
core/: build.zig
core/src/: cli.zig  exports.zig  main.zig  wasm.zig
core/src/compressor/: rules.zig
core/src/scanner/: binary.zig  gitignore.zig  mmap.zig  parallel.zig  walker.zig
core/src/tokenizer/: bpe.zig  counter.zig
docs/: INFINILOOM_DESIGN.md  INFINILOOM_OUTPUT_FORMATS.md
engine/: Cargo.toml  PARSER_README.md  build.rs
engine/benches/: comparison.rs
engine/examples/: parser_demo.rs  test_zig_core.rs
engine/src/: config.rs  default_ignores.rs  dependencies.rs  ffi.rs  git.rs  incremental.rs  lib.rs  mmap_scanner.rs  parser.rs  ranking.rs  remote.rs  security.rs  semantic.rs  tokenizer.rs  types.rs
engine/src/chunking/: mod.rs
engine/src/output/: markdown.rs  mod.rs  toon.rs  xml.rs
engine/src/repomap/: graph.rs  mod.rs
scripts/: benchmark_comparison.sh
tests/e2e/: COMPARISON_ANALYSIS.md  analyze_outputs.py  benchmark_full.sh  comprehensive_comparison.py  config.py  llm_eval.py  run_tests.sh  runner.py  test_comparison.py  test_full_comparison.py
