[package]
name = "infiniloom"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "Repository context generator for LLMs"
license = "MIT"
repository = "https://github.com/homotopylabs/infiniloom"
keywords = ["llm", "ai", "code", "context", "repository"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "infiniloom"
path = "src/main.rs"

[dependencies]
# Core engine
infiniloom-engine = { path = "../engine" }

# CLI framework
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File operations
walkdir = "2.4"
ignore = "0.4"
globset = "0.4"

# Parallel processing
rayon = "1.8"
parking_lot = "0.12"

# Logging
env_logger = "0.11"
log = "0.4"

# Progress indicators
indicatif = "0.17"
console = "0.15"

# Colored output
colored = "2.1"

# Human-readable output
humansize = "2.1"
humantime = "2.1"

# Regex for content processing
regex = "1.10"

# Glob pattern matching
glob = "0.3"

# File watching
notify = "6.1"

# Clipboard support (optional)
clipboard = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = []
# Enable clipboard support
clipboard = ["dep:clipboard"]

[lints]
workspace = true
