[package]
name = "infiniloom-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "Node.js bindings for infiniloom"
license = "MIT"
repository = "https://github.com/homotopylabs/infiniloom"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "2.16", features = ["serde-json"] }
napi-derive = "2.16"

# Core engine
infiniloom-engine = { path = "../../engine" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system
ignore = "0.4"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
