[package]
name = "infiniloom-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
description = "WebAssembly bindings for infiniloom"
license = "MIT"
repository = "https://github.com/homotopylabs/infiniloom"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Engine
infiniloom-engine = { path = "../../engine" }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Console logging for debug
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = "0.4"

# Web APIs
[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlDivElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Reduce binary size
